--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ div {
 .items {
   background-color: #000;
   color: #fff;
-  width: auto%;
+  width: auto;
   text-align: center;
   list-style: none;
 
